issue 4 (footer link text contrast improvement)

--- a/style.css
+++ b/style.css
@@ -651,7 +651,7 @@ label,
 a {
     font-family: "helvetica";
     font-weight: 400;
-    color: #575757!important;
+    color: white;
 }
 
 .container {
@@ -829,6 +829,10 @@ h4 {
 
 .bg-atlanta-20made-20sign-20orange {
     background-image: url("img/atlanta%20made%20sign%20orange.jpg");
+}
+
+.partners{
+    color: white !important;
 }
 
 @media (max-width: 1024px) {
